add name filter

--- a/core/myapp/templates/product_list.html
+++ b/core/myapp/templates/product_list.html
@@ -4,6 +4,9 @@
 {% block content %}
     <h1>Product List</h1>
     <form method="get">
+        <label for="name">name:</label>
+        <input type="text" name="name" id="name">
+        <br>
         <label for="category">Category:</label>
         <input type="text" name="category" id="category">
         <br>
